--- a/Homework.html
+++ b/Homework.html
@@ -4,7 +4,13 @@
 
 <h1>CISC 3610 Homework</h1>
 
-<li><a href="Cartoon.html">Cartoon</a></li>
+<h2>Assignment</h2>
+<li><a href="./Homework/Cartoon/Cartoon.html">Cartoon</a></li>
+<li><a href="./Homework/Anamation/Anamation.html">Anamation</a></li>
+
+</br>
+<h2> Lab </h2>
+<li><a href="./Lab/Chart/Lab1.html">Chart Program</a></li>
 
 <br/>
 <br/>
