--- a/Homework.html
+++ b/Homework.html
@@ -6,7 +6,7 @@
 
 <h2>Assignment</h2>
 <li><a href="./Homework/Cartoon/Cartoon.html">Cartoon</a></li>
-<li><a href="./Homework/Anamation/Anamation.html">Anamation</a></li>
+<li><a href="./Anamation/Anamation.html">Anamation</a></li>
 
 </br>
 <h2> Lab </h2>
