--- a/Homework.html
+++ b/Homework.html
@@ -10,7 +10,7 @@
 
 </br>
 <h2> Lab </h2>
-<li><a href="./Lab/Chart/Lab1.html">Chart Program</a></li>
+<li><a href="Lab1.html">Chart Program</a></li>
 
 <br/>
 <br/>
