--- a/Homework.html
+++ b/Homework.html
@@ -5,13 +5,13 @@
 <h1>CISC 3610 Homework</h1>
 
 <h2>Assignment</h2>
-<li><a href="./Homework/Cartoon/Cartoon.html">Cartoon</a></li><br>
-<li><a href="./Homework/Anamation/Anamation.html">Anamation</a></li>
+<li><a href="./Cartoon/Cartoon.html">Cartoon</a></li><br>
+<li><a href="./Anamation/Anamation.html">Anamation</a></li>
 
 </br>
 <h2> Lab </h2>
-<li><a href="./Lab/Chart/Lab1.html">Chart Program</a></li><br>
-<li><a href="./Lab/Notebook/Notebook.html">NoteBook</a></li>
+<li><a href="Lab1.html">Chart Program</a></li><br>
+<li><a href="./Notebook/Notebook.html">NoteBook</a></li>
 <br/>
 <br/>
 <a href="index.html">Go back to Portfolio</a>
