--- a/Homework.html
+++ b/Homework.html
@@ -5,7 +5,7 @@
 <h1>CISC 3610 Homework</h1>
 
 <h2>Assignment</h2>
-<li><a href="./Cartoon/Cartoon.html">Cartoon</a></li><br>
+<li><a href="Cartoon.html">Cartoon</a></li><br>
 <li><a href="./Anamation/Anamation.html">Anamation</a></li>
 
 </br>
