--- a/Notebook/Notebook.html
+++ b/Notebook/Notebook.html
@@ -26,6 +26,6 @@ and open the template in the editor.
         <br>
         <button id="clearNote">Clear</button>
         <br><br>
-        <a href="../../Homework.html">Go Back To HomeWork List</a>
+        <a href="../Homework.html">Go Back To HomeWork List</a>
     </body>
 </html>
