--- a/Anamation/Anamation.html
+++ b/Anamation/Anamation.html
@@ -20,6 +20,6 @@ and open the template in the editor.
         </canvas>
             
         </br>
-        <a href="../../Homework.html">Go Back To HomeWork List</a>
+        <a href="../Homework.html">Go Back To HomeWork List</a>
     </body>
 </html>
