--- a/Anamation/Anamation.html
+++ b/Anamation/Anamation.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         
     </head>
     <body>
-        <h1>Kangroo Running</h1>
+        <h1>Running Cat</h1>
         <canvas id="canvas" width ="800" height="600">
             <script src="cat.js"></script>
             <script src="animation.js"></script>
