--- a/Homework.html
+++ b/Homework.html
@@ -6,7 +6,7 @@
 
 <h2>Assignment</h2>
 <li><a href="Cartoon.html">Cartoon</a></li><br>
-<li><a href="./Anamation/Anamation.html">Anamation</a></li><<br>
+<li><a href="./Anamation/Anamation.html">Anamation</a></li><br>
 <li><a href="./Data_Visualization/Data_Visualization.html">Data Visualization</a></li>
 
 </br>
