--- a/Homework.html
+++ b/Homework.html
@@ -12,7 +12,8 @@
 </br>
 <h2> Lab </h2>
 <li><a href="Lab1.html">Chart Program</a></li><br>
-<li><a href="./Notebook/Notebook.html">NoteBook</a></li>
+<li><a href="./Notebook/Notebook.html">NoteBook</a></li><br>
+<li><a href="./Profolio/Profolio.html">NoteBook</a></li>
 <br/>
 <br/>
 <a href="index.html">Go back to Portfolio</a>
