--- a/Profolio/Profolio.html
+++ b/Profolio/Profolio.html
@@ -76,7 +76,7 @@ tr{font-size: 125%;}
 
     </tr><br>
     </table>
-    <a href="../../Homework.html">Go Back To HomeWork List</a>
+    <a href="../Homework.html">Go Back To HomeWork List</a>
  
 </body>
  
