--- a/Homework.html
+++ b/Homework.html
@@ -13,7 +13,8 @@
 <h2> Lab </h2>
 <li><a href="Lab1.html">Chart Program</a></li><br>
 <li><a href="./Notebook/Notebook.html">NoteBook</a></li><br>
-<li><a href="./Profolio/Profolio.html">Profolio Website</a></li>
+<li><a href="./Profolio/Profolio.html">Profolio Website</a></li><br>
+<li><a href="./Video/Video.html">Video</a></li>
 <br/>
 <br/>
 <a href="index.html">Go back to Portfolio</a>
