--- a/Video/Video.html
+++ b/Video/Video.html
@@ -22,6 +22,6 @@ and open the template in the editor.
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3z-uP5iBjR8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe><br>
         
-    <a href="../../Homework.html">Go Back To HomeWork List</a>    
+    <a href="../Homework.html">Go Back To HomeWork List</a>   
     </body>
 </html>
