--- a/Drag&Drop/Drag&Drop.html
+++ b/Drag&Drop/Drag&Drop.html
@@ -15,6 +15,6 @@ and open the template in the editor.
     <body>
         <h1>Drag&Drop</h1>
         <div id="dd"></div>
-        <a href="../../Homework.html">Go Back To HomeWork List</a>
+        <a href="../Homework.html">Go Back To HomeWork List</a>
     </body>
 </html>
