--- a/Homework.html
+++ b/Homework.html
@@ -14,7 +14,8 @@
 <li><a href="Lab1.html">Chart Program</a></li><br>
 <li><a href="./Notebook/Notebook.html">NoteBook</a></li><br>
 <li><a href="./Profolio/Profolio.html">Profolio Website</a></li><br>
-<li><a href="./Video/Video.html">Video</a></li>
+<li><a href="./Video/Video.html">Video</a></li><br>
+<li><a href="./Drag&Drop/Drag&Drop.html">Drag&Drop</a></li>
 <br/>
 <br/>
 <a href="index.html">Go back to Portfolio</a>
