--- a/Audio/Audio.html
+++ b/Audio/Audio.html
@@ -61,7 +61,7 @@ and open the template in the editor.
             Lion
         </button>
         <br><br><br><br>
-        <a href="../../Homework.html">Go Back To HomeWork List</a>
+        <a href="../Homework.html">Go Back To HomeWork List</a>
         <script>
             function playAudio(filename){
                 var audio = document.getElementById(filename);
