--- a/Homework.html
+++ b/Homework.html
@@ -15,7 +15,8 @@
 <li><a href="./Notebook/Notebook.html">NoteBook</a></li><br>
 <li><a href="./Profolio/Profolio.html">Profolio Website</a></li><br>
 <li><a href="./Video/Video.html">Video</a></li><br>
-<li><a href="./Drag&Drop/Drag&Drop.html">Drag&Drop</a></li>
+<li><a href="./Drag&Drop/Drag&Drop.html">Drag&Drop</a></li><br>
+<li><a href="./Audio/Audio.html">Audio</a></li>
 <br/>
 <br/>
 <a href="index.html">Go back to Portfolio</a>
