--- a/speech-recognition/recognition.html
+++ b/speech-recognition/recognition.html
@@ -39,6 +39,6 @@ and open the template in the editor.
             <button id="speak" type="button">Speak</button>
         </div>   
         </br>
-        <a href="../../Homework.html">Go Back To HomeWork List</a>
+        <a href="../Homework.html">Go Back To HomeWork List</a>
     </body>
 </html>
