--- a/Homework.html
+++ b/Homework.html
@@ -8,7 +8,8 @@
 <li><a href="Cartoon.html">Cartoon</a></li><br>
 <li><a href="./Anamation/Anamation.html">Anamation</a></li><br>
 <li><a href="./Data_Visualization/Data_Visualization.html">Data Visualization</a></li><br>
-<li><a href="./speech-recognition/recognition.html">Speech Recognition</a></li>
+<li><a href="./speech-recognition/recognition.html">Speech Recognition</a></li><br>
+<li><a href="./game/game.html">Game</a></li>
 
 </br>
 <h2> Lab </h2>
