--- a/game/game.html
+++ b/game/game.html
@@ -36,7 +36,7 @@ and open the template in the editor.
   <div id="game"></div>
   <script src="//cdn.jsdelivr.net/npm/phaser@3.17.0/dist/phaser.min.js"></script>
   <script src="brick.js"></script>
-  <a href="../../Homework.html">Go Back To HomeWork List</a>
+  <a href="../Homework.html">Go Back To HomeWork List</a>
 </body>
 
 </html>
